unpackaged/main/default/objects/APXTConga4__Conga_Composer_Settings__c/fields/APXTConga4__Comments__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>