unpackaged/main/default/objects/APXTConga4__Conga_Composer_Settings__c/fields/APXTConga4__Disable_C7_Triggers__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Disable_C7_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable C7 Triggers</label>
    <type>Checkbox</type>
</CustomField>