unpackaged/main/default/objects/APXTConga4__Conga_Composer_Settings__c/fields/APXTConga4__Server_Override__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Server_Override__c</fullName>
    <description>Overrides the ServerURL parameter in Composer and Mail Merge interactions with Salesforce.
https://na14.salesforce.com/services/Soap/u/8.0/00Dd0000000dy26
The override value would replace na14.salesforce.com</description>
    <inlineHelpText>Overrides the ServerURL parameter in Composer and Mail Merge interactions with Salesforce.
https://na14.salesforce.com/services/Soap/u/8.0/00Dd0000000dy26
The override value would replace na14.salesforce.com</inlineHelpText>
    <label>Server Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>